# MyTFMDescent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/formula 1/: Formula_1_mesh.mtl
assets/scenes/: MyTFMScene.mh
assets/shaders/: FBQuad.glsl  basic.shader  basic4.shader  basiccopia.shader  color2D.glsl
assets/shaders/2D/: fragment-2.fs
assets/shaders/3D/COLOR/: phong1.glsl
assets/shaders/3D/TEXTU/: FBQuad.glsl  phong2 - copia.glsl  phong2.glsl  textureID.glsl
assets/shaders/basic/: fragment-2.fs  fragment.fs  vertex-2.vs  vertex.vs
assets/shaders/perspectiveShaders/: fragment.fs  materialShader.vs  textureShader.vs  vertex.vs
assets/shaders/perspectiveShaders/MaterialShader/: fragment.fs  vertex.vs
assets/shaders/perspectiveShaders/TextureShader/: fragment.fs  vertex.vs
assets/textures/BRICKS/: brick_specular.tiff
cmake/: deps_files.cmake
games/AG02/: main.cpp
games/AG03/: main.cpp
games/AG04/: main.cpp
games/AG05/: main.cpp
games/AG06/: main.cpp
games/AG07/: main.cpp
games/AG08_01/: main.cpp
games/AG08_02/: main.cpp
games/AG09_01/: main.cpp
games/AG09_02/: main.cpp
games/AG09_03/: main.cpp
games/AG09_04/: main.cpp
games/AG10/: main.cpp
games/AG11_01/: main.cpp
games/AG11_02/: main.cpp
games/AG11_03/: main.cpp
games/AG12/: main.cpp
games/AG13/: main.cpp
games/AG14/: main.cpp
games/AG15/: main.cpp
games/MyTFMDescent/: main.cpp
games/study/: main.cpp
games/study2/: main.cpp
games/study3/: main.cpp
games/tests/: main.cpp
include/engine/: GLhandleErrors.hpp  MHCore.hpp  MHSetup.hpp  baseWindow.hpp  engine.hpp  mainPoint.hpp  window.hpp
include/engine/events/: Event.hpp  EventSender.hpp
include/engine/events/AppEvents/: OnAppEvents.hpp
include/engine/events/KeyEvents/: OnKeyEvents.hpp
include/engine/events/MouseEvents/: OnMouseEvents.hpp
include/engine/geometry/: cube.hpp  geometry.hpp
include/engine/log/: log.hpp  logManager.hpp
include/engine/log/logStrategies/: logStrategy1.hpp
include/engine/log/strategies/: simpleLog.hpp
include/engine/manager/: entitymanager.hpp
include/engine/object/: ebo.hpp  vao.hpp  vbl.hpp  vbo.hpp  vertexbuffer.hpp
include/engine/platform/: window.hpp
include/engine/platform/windows/: windowWin.hpp
include/engine/system/: Input.hpp  MHCore.hpp  handleGLerrors.hpp  render.hpp  shader.hpp
include/engine/system/ImGui/: ImGuiDockSpace.hpp  ImGuiLayer.hpp
include/engine/system/cameraManager/: CameraEditor.hpp  CameraFirstPerson.hpp
include/engine/system/events/: Event.hpp  EventHandler.hpp  EventSender.hpp
include/engine/system/events/AppEvents/: OnAppEvents.hpp
include/engine/system/events/KeyEvents/: KeyEvent.hpp  OnKeyEvents.hpp
include/engine/system/events/MouseEvents/: MouseButtonEvent.hpp  OnMouseEvents.hpp
include/engine/system/geometry/: cube.hpp  geometry.hpp  quad.hpp  sphere.hpp  teapot.hpp  triangle.hpp
include/engine/system/log/: Log.hpp  LogManager.hpp
include/engine/system/log/strategies/: SimpleLog.hpp
include/engine/system/node/: Node.hpp  NodeLayer.hpp
include/engine/system/particlesTesting/: ParticlesSystem.hpp  Random.hpp
include/engine/system/platform/: Window.hpp
include/engine/system/platform/Windows/: WindowInput.hpp  WindowWin.hpp
include/engine/system/renderer/: BufferLayout.hpp  EBO.hpp  Framebuffer.hpp  OrthoCamera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  RenderCommand.hpp  RenderDrawCall.hpp  Renderer.hpp  Renderer3D.hpp  RendererApi.hpp  RendererContext.hpp  RendererGeometry.hpp  ShaderLayout.hpp  Texture.hpp  VAO.hpp  VBO.hpp  shader.hpp
include/engine/system/scene/: Components.hpp  Entity.hpp  Scene.hpp  SerializerScene.hpp
include/engine/system/utils/: DeltaTime.hpp  Descompose.hpp  Library.hpp  utils.hpp
include/engine/yaml-cpp/include/yaml-cpp/: stlemitter.h
projects/MH_Editor/: MH_Editor.cpp
projects/MyTFM/: BrowserPanel.cpp  BrowserPanel.hpp  MenuBar.cpp  MenuBar.hpp  MyTFM.cpp  MyTFM.hpp  MyTFMLayer1.cpp  MyTFMLayer1.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
projects/MyTFMDescent/: MyTFMDescent.cpp
projects/ProjectExample/: ProjectExample.cpp  ProjectExample.hpp  ProjectExampleLayer1.cpp  ProjectExampleLayer1.hpp
projects/TestImgui/: TestImgui.cpp
projects/Tests/: Tests.cpp
shaders/: texture2D.glsl
shaders/2D/: fragment.fs
shaders/3D/: textuShader.glsl
shaders/3D/COLOR/: phong2 - copia.glsl
shaders/3D/TEXTU/: phong2 - copia.glsl  phong2 directional.glsl  phong2.glsl  phong2.glsl.backup  phong2pointlight.glsl
shaders/ortho/: vertex-2.vs  vertex.vs
shaders/persp/: colorShader.glsl
src/engine/: MHelmetPch.cpp  engine.cpp  mhpch.cpp
src/engine/ImGui/: imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/engine/geometry/: cube.cpp  geometry.cpp  quad.cpp  teapot.cpp
src/engine/log/: log.cpp  logManager.cpp
src/engine/log/logStrategies/: logStrategy1.cpp
src/engine/log/strategies/: simpleLog.cpp
src/engine/object/: ebo.cpp  vao.cpp  vbo.cpp
src/engine/platform/windows/: windowWin.cpp
src/engine/system/: MHCore.cpp  handleGLerrors.cpp  render.cpp  shader.cpp
src/engine/system/ImGui/: ImGuiDockSpace.cpp  ImGuiLayer.cpp  imgui_hack_glfw.cpp  imgui_hack_opengl3.cpp
src/engine/system/cameraManager/: CameraEditor.cpp  CameraFirstPerson.cpp
src/engine/system/geometry/: cube.cpp  geometry.cpp  quad.cpp  sphere.cpp  teapot.cpp  triangle.cpp
src/engine/system/log/: LogManager.cpp
src/engine/system/log/strategies/: SimpleLog.cpp
src/engine/system/node/: NodeLayer.cpp
src/engine/system/particlesTesting/: ParticlesSystem.cpp  Random.cpp
src/engine/system/platform/Windows/: WindowInput.cpp  WindowWin.cpp
src/engine/system/renderer/: EBO.cpp  Framebuffer.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  RenderCommand.cpp  RenderDrawCall.cpp  Renderer.cpp  RendererApi.cpp  RendererContext.cpp  RendererGeometry.cpp  Texture.cpp  VAO.cpp  VBO.cpp  shader.cpp
src/engine/system/scene/: Entity.cpp  Scene.cpp  SerializerScene.cpp
src/engine/system/utils/: Descompose.cpp  Library.cpp  utils.cpp
(+20 files in other folders)
